--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,17 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+
+# IDE
+.idea
+.idea/*
+*.iml
+.idea/*.iml
+.idea/*.xml
+out
+gen
+*.patch
+/.eslintcache
+/.cert/cert.pem
+/.cert/key.pem
