--- a/package.json
+++ b/package.json
@@ -16,17 +16,22 @@
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.3"
   },
+  "devDependencies": {
+    "@craco/craco": "^6.4.3",
+    "circular-dependency-plugin": "^5.2.2",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "prettier": "^2.5.1",
+    "husky": "^7.0.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "eject": "react-scripts eject",
+    "lint": "eslint '*/**/*.{js,,jsonjsx,ts,tsx}' --quiet --fix",
+    "test:lint": "eslint '*/**/*.{js,jsx,ts,tsx}' --quiet",
+    "prepare": "husky install"
   },
   "browserslist": {
     "production": [
@@ -38,6 +43,11 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
+    ]
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "eslint . --fix"
     ]
   }
 }
