--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
     "husky": "^7.0.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
     "eject": "react-scripts eject",
     "lint": "eslint '*/**/*.{js,,jsonjsx,ts,tsx}' --quiet --fix",
     "test:lint": "eslint '*/**/*.{js,jsx,ts,tsx}' --quiet",
