--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "@types/node": "^16.11.19",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "firebase": "^9.6.2",
+    "msw": "0.35.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "stop-runaway-react-effects": "^2.0.0",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.3"
   },
@@ -21,8 +24,8 @@
     "circular-dependency-plugin": "^5.2.2",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "prettier": "^2.5.1",
-    "husky": "^7.0.0"
+    "husky": "^7.0.0",
+    "prettier": "^2.5.1"
   },
   "scripts": {
     "start": "craco start",
@@ -49,5 +52,8 @@
     "*.{js,jsx,ts,tsx}": [
       "eslint . --fix"
     ]
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
