--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-location": "^3.3.0",
     "react-scripts": "5.0.0",
     "stop-runaway-react-effects": "^2.0.0",
     "typescript": "^4.5.4",
@@ -32,7 +33,8 @@
     "eslint-plugin-mui-unused-classes": "^1.0.3",
     "eslint-plugin-prettier": "^4.0.0",
     "husky": "^7.0.0",
-    "prettier": "^2.5.1"
+    "prettier": "^2.5.1",
+    "react-location-devtools": "^3.3.0"
   },
   "scripts": {
     "start": "craco start",
