--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,18 +3,18 @@
   "short_name": "Pizzeria Pizzas",
   "icons": [
     {
-      "src": "/android-chrome-192x192.png",
+      "src": "/images/android-chrome-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/android-chrome-512x512.png",
+      "src": "/images/android-chrome-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#fffff",
-  "background_color": "#ffffff"
+  "theme_color": "#fff",
+  "background_color": "#fff"
 }
