--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-location": "^3.3.0",
+    "react-multi-clamp": "^2.0.4",
     "react-query": "^3.34.8",
     "react-scripts": "5.0.0",
     "stop-runaway-react-effects": "^2.0.0",
