--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "react-scripts": "5.0.0",
     "stop-runaway-react-effects": "^2.0.0",
     "typescript": "^4.5.4",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.3"
   },
   "devDependencies": {
     "@craco/craco": "^6.4.3",
     "@types/lodash": "^4.14.178",
+    "@types/uuid": "^8.3.4",
     "circular-dependency-plugin": "^5.2.2",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-mui-unused-classes": "^1.0.3",
