--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "^17.0.11",
     "firebase": "^9.6.2",
     "lodash": "^4.17.21",
+    "loglevel": "^1.8.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-location": "^3.3.0",
@@ -25,6 +26,7 @@
     "react-scripts": "5.0.0",
     "stop-runaway-react-effects": "^2.0.0",
     "typescript": "^4.5.4",
+    "universal-cookie": "^4.0.4",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.3"
   },
