chore: fix github actins config

--- a/.github/workflows/react-vite.yml
+++ b/.github/workflows/react-vite.yml
@@ -22,7 +22,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
 
       - name: Install dependencies
-        run: npm run install -f
+        run: npm i -f
 
       - name: Eslint code quality check
         run: npm run test:lint
