--- a/.github/workflows/react.yml
+++ b/.github/workflows/react.yml
@@ -35,7 +35,7 @@ jobs:
         if: github.ref == 'refs/heads/main'
         with:
           name: build-artifacts
-          path: ./dist
+          path: ./build
 
   Deploy:
     needs: build
@@ -47,13 +47,13 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: build-artifacts
-          path: ./dist
+          path: ./build
 
       - name: Deploy to github-pages
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist
+          publish_dir: ./build
           publish_branch: gh-pages
           user_name: 'github-actions[bot]'
           user_email: 'github-actions[bot]@users.noreply.github.com'
