--- a/.github/workflows/react.yml
+++ b/.github/workflows/react.yml
@@ -32,7 +32,7 @@ jobs:
         
       - name: Uploading build artifacts
         uses: actions/upload-artifact@v4
-        if: github.ref == 'refs/heads/main'
+        if: github.ref == 'refs/heads/master'
         with:
           name: build-artifacts
           path: ./build
@@ -40,7 +40,7 @@ jobs:
   Deploy:
     needs: build
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/master'
 
     steps:
       - name: Download build artifacts
