--- a/package.json
+++ b/package.json
@@ -50,7 +50,9 @@
     "eject": "react-scripts eject",
     "lint": "eslint '*/**/*.{js,,jsonjsx,ts,tsx}' --quiet --fix",
     "test:lint": "eslint '*/**/*.{js,jsx,ts,tsx}' --quiet",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "browserslist": {
     "production": [
@@ -71,5 +73,6 @@
   },
   "msw": {
     "workerDirectory": "public"
-  }
+  },
+  "packageManager": "pnpm@10.11.0+sha512.6540583f41cc5f628eb3d9773ecee802f4f9ef9923cc45b69890fb47991d4b092964694ec3a4f738a420c918a333062c8b925d312f42e4f0c263eb603551f977"
 }
