--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "^16.11.19",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "caniuse-lite": "^1.0.30001718",
     "firebase": "^9.6.2",
     "lodash": "^4.17.21",
     "loglevel": "^1.8.0",
@@ -39,6 +40,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-mui-unused-classes": "^1.0.3",
     "eslint-plugin-prettier": "^4.0.0",
+    "gh-pages": "^6.3.0",
     "husky": "^7.0.0",
     "prettier": "^2.5.1",
     "react-location-devtools": "^3.3.0"
@@ -52,7 +54,7 @@
     "test:lint": "eslint '*/**/*.{js,jsx,ts,tsx}' --quiet",
     "prepare": "husky install",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d build"
   },
   "browserslist": {
     "production": [
